--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,3 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.css";
+@import  "assets/icon/icofont/css/icofont.min.css";
